objects/DynamicSectionRendering__mdt.object
<CustomObject>
    <description>Settings that allow us to hide/show sections based on an object, field, value of the field</description>
    <fields>
        <fullName>Field__c</fullName>
        <description>APIName of the field you are basing hiding a section on</description>
        <label>Field</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>The object of the field you are basing hiding a section on</description>
        <label>Object</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <description>The section we want to hide/show</description>
        <label>Section</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DynamicSectionRendering</label>
    <pluralLabel>DynamicSectionRenderings</pluralLabel>
</CustomObject>